Fix Sensei Pro spacing

--- a/assets/home/sections/sensei-pro-ad.scss
+++ b/assets/home/sections/sensei-pro-ad.scss
@@ -4,7 +4,7 @@
 	&__sensei-pro-ad {
 		display: flex;
 		flex-direction: column-reverse;
-		margin: 0 -10px 20px;
+		margin-bottom: 20px;
 		font-size: 18px;
 		line-height: 1.5;
 		background-color: #26212e;
@@ -12,7 +12,6 @@
 
 		@media (min-width: $break-medium) {
 			flex-direction: row;
-			margin: 20px 0;
 		}
 
 		p {
